--- a/todo
+++ b/todo
@@ -2,3 +2,4 @@ readme replace
 --Subscriber
 --.spec.
 Для чего разные объекты RegisterUserDto = CreateUserDto
+посмотреть где используется UserIdDto
