--- a/todo
+++ b/todo
@@ -3,3 +3,4 @@ readme replace
 --.spec.
 Для чего разные объекты RegisterUserDto = CreateUserDto
 посмотреть где используется UserIdDto
+убрать все .http
