--- a/todo
+++ b/todo
@@ -4,3 +4,7 @@ readme replace
 Для чего разные объекты RegisterUserDto = CreateUserDto
 посмотреть где используется UserIdDto
 скорее всего убрать CheckAuthForceGuard
+удалить лишнее из seed.ts
+скорректировать readme на предмет вставки генеренных данных
+вставить рандомного пользователя в монго
+4.1.1. Приложение предоставляет CLI. Для запуска предусмотрен отдельный сценарий в package.json — cli.
