--- a/todo
+++ b/todo
@@ -6,5 +6,5 @@ readme replace
 скорее всего убрать CheckAuthForceGuard
 удалить лишнее из seed.ts
 скорректировать readme на предмет вставки генеренных данных
-вставить рандомного пользователя в монго
+++yaml
 4.1.1. Приложение предоставляет CLI. Для запуска предусмотрен отдельный сценарий в package.json — cli.
